feat: 새로운 할 일을 확인 버튼으로 추가한다

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <header class="d-flex justify-center items-center fiex-wrap my-4">
                     <button id="day-decrease-button" class="btn bg-white shadow mx-1"><</button>
                     <a href="/" class="text-black">
-                        <h1 id="todo-date" class="mx-36 text-3xl text-center font-bold">2023년 2월 24일</h1>
+                        <h1 id="todo-date" class="mx-36 text-3xl text-center font-bold">2023-02-23</h1>
                     </a>
                     <button id="day-increase-button" class="btn bg-white shadow mx-1">></button>
                 </header>
