--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 </button>
                             </div>
                         </form>
-                        <ul id="menu-list" class="mt-3 pl-0"></ul>
+                        <ul id="todo-list" class="mt-3 pl-0"></ul>
                     </div>
                 </main>
             </div>
